--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,15 @@
 .chatBox {
 	width: 50%;
 	/* height: 100px; */
-	border: 1px solid blue;
+	border: 1px solid white;
 	box-sizing: border-box;
 	/* margin:0 auto; */
 
 }
 .chatBox1 {
 	display:inline-block;
+}
+body {
+	background-color: #181818;
+	color:white
 }
