--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 .chatBox {
 	width: 50%;
 	/* height: 100px; */
-	border: 1px solid white;
+	border: 0.5px solid #909090;
 	box-sizing: border-box;
 	/* margin:0 auto; */
 
@@ -11,5 +11,26 @@
 }
 body {
 	background-color: #181818;
-	color:white
+	color:white;
+	font-size: 15px
+}
+
+input[type=text], select {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=submit] {
+  width: 15%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 7px 7px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
